--- a/src/components/Calculation_shipment_1step/CalculationShipment_1step.module.css
+++ b/src/components/Calculation_shipment_1step/CalculationShipment_1step.module.css
@@ -144,6 +144,9 @@
     grid-template-columns: 50% 50%;
     gap:20px;
     padding-bottom:35px;
+    @media(max-width:1050px){
+        padding-left:1%;
+    }
 }
 
 .custom__radio{
@@ -253,6 +256,9 @@
         
     }
 }
+.calc__container_stepTwo_without_number{
+    padding-left:1%;
+}
 .calc__container_results_date{
     @media(max-width:1050px){
         display:grid;
@@ -348,6 +354,7 @@
 .legend_second{
     @media(max-width:1050px){
         padding-top:25px;
+        padding-left:1%;
     }
 }
 
