--- a/src/components/OrderForm/OrderForm.module.css
+++ b/src/components/OrderForm/OrderForm.module.css
@@ -130,17 +130,70 @@
         padding-bottom:50px;
     }
 }
-.form__input_div{
-    @media(max-width:1050px){
-        
-    }
-    @media(min-width:1050px) and (max-width:1500px){
-        
-    }
-    @media(min-width:1500px){
-        
-    }
+/* 1 – Изменим стили шрифтов */
+/* 2 – Удалим margin в Firefox и Safari */
+input[type="text"] {
+    font-family: inherit; /* 1 */
+    font-size: inherit; /* 1 */
+    line-height: inherit; /* 1 */
+    margin: 0; /* 2 */
 }
+.text_field {
+    margin-bottom: 1rem;
+}
+
+  /* стили для input */
+.text_field__input {
+    display: block;
+    width: 100%;
+    height: calc(2.25rem + 2px);
+    padding: 0.375rem 0.75rem;
+    color: rgba(255, 255, 255, 0.60);
+    
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    background-color:inherit;
+    border-bottom:1px solid rgba(255, 255, 255, 0.30);
+    /* background-clip: padding-box;
+    border: 1px solid #bdbdbd;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
+}
+
+/*Стилизуем placeholder  */
+.text_field__input::placeholder {
+    color: rgba(255, 255, 255, 0.60);
+
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+/* Обновленные стили для :focus */
+.text_field__input:focus {
+    color: white; /* Изменение цвета текста на белый */
+    border-bottom: 1px solid white; /* Изменение цвета нижнего бордера на белый */
+    outline: none; /* Удаление стандартной обводки */
+}
+
+/* Стили для изменения цвета placeholder при фокусе */
+.text_field__input:focus::placeholder {
+    color: white; /* Изменение цвета placeholder на белый */
+}
+
+/* Для поддержки разных браузеров */
+.text_field__input:focus:-ms-input-placeholder {
+    color: white;
+}
+
+.text_field__input:focus::-moz-placeholder {
+    color: white;
+    opacity: 1; /* Для Firefox необходимо явно задать opacity */
+}
+
 .form__checkboxButton_container{
     @media(max-width:1050px){
         display:flex;
@@ -159,7 +212,6 @@
     }
 }
 .form__checkbox{
-   
     @media(max-width:1050px){
         padding-bottom:30px;
     }
@@ -172,6 +224,9 @@
 }
 .form__container_button{
     padding-bottom:60px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
 }
 .form__button{
     border: 1px solid rgba(255, 255, 255, 0.30);
@@ -224,4 +279,38 @@
     background-repeat: no-repeat;
     background-size:cover; 
     /* border: 1px solid red; */
+}
+.form__checkbox_lable{
+    font-weight:200;
+}
+/* CHECKBOX */
+.custom_checkbox {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+.custom_checkbox+label {
+    display: inline-flex;
+    gap:16px;
+    width:100%;
+    align-items: center;
+    user-select: none;
+}
+.custom_checkbox+label::before {
+    content: '';
+    display: inline-block;
+    width: 22px;
+    height: 22px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 1px solid rgba(255, 255, 255, 0.30);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+    cursor:pointer;
+}
+/* галочка */
+.custom_checkbox:checked+label::before {
+    border-color: #FFFFFF;
+    background-image: url("/src/assets/images/icons_check.svg");
 }
