--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,11 +1,10 @@
 .container{
     padding: 0; 
     color: #ffffff; 
-    font-size: 0.75rem;
-    line-height: 1rem; 
-    font-style: normal; 
-    font-weight: 500; 
-    text-transform: uppercase; 
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    text-transform: uppercase;
     grid-template-columns: repeat(5, minmax(0, 1fr)); 
     /* gap: 5%;  */
     width: 70%;
@@ -14,11 +13,10 @@
     display: none; 
     }
     @media(min-width: 1050px){
-        /* display:grid;
-        grid-template-columns:19% 19% 19% 19% 19%;
-        gap: 5%;  */
         display: flex;
         justify-content: space-between;
+        font-size: 14px;
+        letter-spacing: 1.2px;
     }
 }
 /* 'm-0 gap-4  not-italic list-none' */
