--- a/src/components/About_us/Number.module.css
+++ b/src/components/About_us/Number.module.css
@@ -1,5 +1,7 @@
 .main__section{
     color:white;
+}
+.container_numberSection{
     padding-left:5%;
     padding-right:5%;
     position:relative;
@@ -10,72 +12,69 @@
     align-items:center;
     justify-content:center;
     flex-direction:column;
-
-    padding-top:60px;
-    padding-bottom:60px;
+    
     position:relative;
     padding-left:1%;
     padding-right:1%;
-    border-left: 1px solid rgba(43, 61, 82, 0.30);
-    border-right: 1px solid rgba(43, 61, 82, 0.30);
 }
 
 .section_hidden{
     display:hidden;
     visibility:hidden;
 }
-.section__info_bg_smallest{
-    display:none;
+.section__info_bg{
     @media (max-width:650px){
-        opacity:0.26;
-        
+        opacity:0.40;
         display:block;
         width: 320.053px;
         height: 167.416px;
         transform: rotate(4.493deg);
+        background-image:url('/src/assets/images/NumberSectionBG_mobile.svg');
+        background-repeat: no-repeat;
         flex-shrink: 0; 
         position:absolute;
         left:-20px;
         top:16px;
         overflow:hidden;
-}
-}
-.section__info_bg_small{
-    display:none;
+    }
     @media (min-width:650px) and (max-width: 1280px){
-        opacity:0.26;
+        opacity:0.40;
         display:block;
         width: 100%;
         height: 380.642px;
         transform: rotate(4.483deg);
+        background-image:url('/src/assets/images/NumberSectionBG_laptop.svg');
+        background-repeat: no-repeat;
         flex-shrink: 0;
         position:absolute;
         left:-20px;
-        top:30px;
+        top:65px;
         overflow:hidden;
-}
-}
-
-.section__info_bg_big{
-    display:none;
+    }
     @media (min-width:1280px){
-        opacity:0.26;
+        opacity:0.40;
         display:block;
         width: 100%;
         height: 600px;
         transform: rotate(4.493deg);
+        background-image:url('/src/assets/images/NumberSectionBG_desktop.svg');
+        background-repeat: no-repeat; 
         flex-shrink: 0;
         position:absolute;
         left:-50px;
-        top:0;
+        top:150px;
         overflow:hidden;
-}
+    }
 }
 .section__info{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction:column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction:column;
+    padding-top:60px;
+    padding-bottom:60px;
+    border-left: 1px solid rgba(43, 61, 82, 0.30);
+    border-right: 1px solid rgba(43, 61, 82, 0.30);
 }
 .section__info_textContainer{
     display:flex;
@@ -107,8 +106,8 @@
 
 .container__section{
     max-width:1600px;
-    padding-left:1%;
-    padding-right:1%;
+    padding-left:2%;
+    padding-right:2%;
     @media(max-width:900px){
         display:flex;
         flex-direction:column;
@@ -116,8 +115,13 @@
     }
     @media(min-width:900px) and (max-width:1300px){
         display:grid;
-        grid-template-columns:50% 50%;
-        gap:30px;
+        width:100%;
+        align-items: center;
+        justify-content: center;
+        grid-template-columns:40% 40%;
+        gap: 50px;;
+        place-items: center;
+        /* place-content: center; */
     }
     @media(min-width:1300px){
         display:grid;
@@ -136,18 +140,18 @@
         max-width:340px;
         height:130px;
     }
-    @media(min-width:650px)and (max-width: 1020px){
+    @media(min-width:650px) and (max-width: 1020px){
         gap:20px;
-        max-width:320px;
-        height:125px;
+        max-width:360px;
+        max-height:125px;
     }
-    @media(min-width:1020px)and (max-width: 1280px){
+    @media(min-width:1020px) and (max-width: 1280px){
         gap:20px;
-        max-width:310px;
-        height:140px;
+        max-width:420px;
+        max-height:140px;
     }
     
-    @media(min-width: 1280px)and (max-width: 1580px){
+    @media(min-width: 1280px) and (max-width: 1580px){
         gap:30px;
         max-width:360px;
         height:150px;
