--- a/src/components/MainPageComponents/Calculation_shipment_1step/CalculationShipment_1step.module.css
+++ b/src/components/MainPageComponents/Calculation_shipment_1step/CalculationShipment_1step.module.css
@@ -250,7 +250,7 @@
     }
     @media(min-width:1050px){
         display:grid;
-        justify-content:center;
+        /* justify-content:center; */
         
     }
 }
@@ -259,43 +259,61 @@
 }
 .calc__container_results_date{
     @media(max-width:1050px){
-        display:grid;
+        display: grid;
+        grid-template-rows: 20px;
         grid-template-columns: 50% 50%;
-        padding-bottom:25px;
-        gap:3%;
+        gap: 20px;
+        padding-bottom: 35px;
     }
     @media(min-width:1050px){
-        display:none;
-        visibility:hidden;
+        /* display:none;
+        visibility:hidden; */
+        display:grid;
+        grid-template-columns: 50% 50%;
+        padding-bottom:20px;
+        gap:3%;
+        
     }
 }
 .calc__container_results_date1{
     
     @media(max-width:1050px){
-        display:grid;
+        /* display:grid;
         grid-template-columns: 50% 50%;
-        padding-bottom:25px;
+        padding-bottom:25px; */
+        display:none;
+        visibility:hidden;
     }
     @media(min-width:1050px){
         padding-top:20px;
         display:grid;
         grid-template-columns: 55% 45%;
         width:250px;
-        justify-content:center;
+        
+
+        /* display:grid;
+        grid-template-columns: 50% 50%;
+        padding-bottom:20px;
+        gap:3%; */
+        /* justify-content:center; */
     }
 }
 
 .calc__container_results_date2{
     
     @media(max-width:1050px){
-        display:grid;
-        grid-template-columns: 60% 40%;
-        padding-bottom:25px;
+        display: grid;
+        grid-template-rows: 20px;
+        grid-template-columns: 50% 50%;
+        gap: 20px;
+        padding-bottom: 35px;
     }
     @media(min-width:1050px){
-        padding-top:10px;
+        /* padding-top:10px;
         display:grid;
-        grid-template-columns: 55% 45%;
+        grid-template-columns: 55% 45%; */
+        display:none;
+        visibility:hidden;
     }
 }
 /* .calc__container_stepTwo_without_number{
@@ -303,14 +321,9 @@
 } */
 .date{
     position: relative;
-    @media(max-width:400px){
-        width:100%
-    }
-    @media(min-width:400px) and (max-width:470px){
-        width:70%;
-    }
-    @media(min-width:470px) and (max-width:1050px){
-        width:55%;
+    @media(max-width:1050px){
+        min-width:95px;
+        width:45%
     }
     @media(min-width:1050px){
         width:100%;
@@ -397,10 +410,12 @@
 }
 
 .country__name_main{
+    /* display:none;
+    visibility:hidden; */
     @media(max-width:1050px){
         display:flex;
         gap:8px;
-        padding-bottom:30px;
+        padding-bottom:20px;
     }
     @media(min-width:1050px){
         display:none;
