--- a/src/components/MainPageOnOtherPaths/ForBrokersMainPage/MainPageOtherPaths.module.css
+++ b/src/components/MainPageOnOtherPaths/ForBrokersMainPage/MainPageOtherPaths.module.css
@@ -1,12 +1,60 @@
-.brocker__mainPage_container{
-
+.brocker__mainPage_section_brockers{
+    width:100%;
+    background-image:url('../../../assets/images/MainPageBGBrockers.jpg');
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:center;
 }
-.brocker__mainPage_section{
-
+.brocker__mainPage_section_about{
+    width:100%;
+    background-image:url('../../../assets/images/MainPageBGWarehouses.jpg');
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:center;
+}
+.brocker__mainPage_section_contacts{
+    width:100%;
+    background-image:url('../../../assets/images/MainPageBGContacts.jpg');
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:center;
+}
+.brocker__mainPage_container{
+    display:flex;
+    max-width:1600px;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
 }
 .brocker__mainPage_header{
-
+    text-align: center;
+    @media(max-width:800px){
+        font-size: 34px;
+        line-height: 40px;
+        padding-bottom:170px;
+    }
+    @media(min-width:801px) and (max-width:1300px){
+        line-height: 75px;
+        padding-bottom:140px;
+    }
+    @media(min-width:1301px){
+        font-size: 72px;
+        line-height: 75px; 
+        padding-bottom:120px;
+    }
 }
 .brocker__mainPage_logoName{
-    
+    text-align: center;
+    color:white;
+    @media(max-width:800px){
+        padding-top:170px;
+        padding-bottom:12px;
+    }
+    @media(min-width:801px) and (max-width:1300px){
+        padding-top:140px;
+    }
+    @media(min-width:1300px){
+        padding-top:120px;
+        padding-bottom:20px;
+    }
 }
