--- a/src/components/MainPageOnOtherPaths/ForBrokersMainPage/MainPageOtherPaths.module.css
+++ b/src/components/MainPageOnOtherPaths/ForBrokersMainPage/MainPageOtherPaths.module.css
@@ -33,11 +33,12 @@
         line-height: 40px;
         padding-bottom:170px;
     }
-    @media(min-width:801px) and (max-width:1300px){
+    @media(min-width:801px) and (max-width:1500px){
+        font-size: 34px;
         line-height: 75px;
         padding-bottom:140px;
     }
-    @media(min-width:1301px){
+    @media(min-width:1501px){
         font-size: 72px;
         line-height: 75px; 
         padding-bottom:120px;
@@ -50,10 +51,10 @@
         padding-top:170px;
         padding-bottom:12px;
     }
-    @media(min-width:801px) and (max-width:1300px){
+    @media(min-width:801px) and (max-width:1500px){
         padding-top:140px;
     }
-    @media(min-width:1300px){
+    @media(min-width:1500px){
         padding-top:120px;
         padding-bottom:20px;
     }
