--- a/src/components/ForBrokersComponents/BrockersPage.module.css
+++ b/src/components/ForBrokersComponents/BrockersPage.module.css
@@ -34,15 +34,24 @@
         align-items:center;
         justify-content:center;
     }
-    @media(min-width:801px) and (max-width:1500px){
-        display:flex;
+    @media(min-width:801px) and (max-width:1100px){
+        display:grid;
+        grid-template-columns:55% 45%;
+        align-items:center;
+        justify-content:center;
+    }
+    @media(min-width:1101px) and (max-width:1500px){
+        display:grid;
+        grid-template-columns:65% 35%;
+        align-items:center;
+        justify-content:center;
     }
     @media(min-width:1501px){
         display:grid;
     }
 }
 .brocker__content_bg{
-    @media (max-width:650px){
+    @media (max-width:800px){
         opacity:0.9;
         display:block;
         width: 320.053px;
@@ -54,12 +63,13 @@
         position:absolute;
         /* left:-20px;
         top:16px; */
+        top:20px;
         overflow:hidden;
     }
-    @media (min-width:651px) and (max-width: 1280px){
+    @media (min-width:801px) and (max-width: 1280px){
         opacity:0.9;
         display:block;
-        width: 100%;
+        width: 90%;
         height: 380.642px;
         transform: rotate(4.483deg);
         background-image:url('/src/assets/images/BrockersBGLaptop.svg');
@@ -68,27 +78,27 @@
         position:absolute;
         /* left:-20px;
         top:65px; */
+        
         overflow:hidden;
     }
     @media (min-width:1281px){
         opacity:0.9;
         display:block;
-        width: 100%;
+        width: 90%;
         height: 600px;
         transform: rotate(4.493deg);
         background-image:url('/src/assets/images/BrockersBGDesktop.svg');
         background-repeat: no-repeat; 
         flex-shrink: 0;
         position:absolute;
-        /* left:-50px;
-        top:150px; */
+        top:50px;
         overflow:hidden;
     }
 }
 .brocker__content_bg_down{
     @media (max-width:650px){
         opacity:0.9;
-        width: 100%;
+        width: 90%;
         height: 380.642px;
         bottom:-35%;
         left:70%;
@@ -99,10 +109,10 @@
         position:absolute;
         overflow:hidden;
     }
-    @media (min-width:651px) and (max-width: 1280px){
+    @media (min-width:651px) and (max-width: 1500px){
         opacity:0.9;
         display:block;
-        width: 100%;
+        width: 90%;
         height: 380.642px;
         transform: rotate(4.483deg);
         /* background-image:url('/src/assets/images/BrockersBGLaptop.svg'); */
@@ -113,10 +123,10 @@
         top:65px; */
         overflow:hidden;
     }
-    @media (min-width:1281px){
+    @media (min-width:1501px){
         opacity:0.9;
         display:block;
-        width: 100%;
+        width: 90%;
         height: 600px;
         transform: rotate(4.493deg);
         background-image:url('/src/assets/images/BrokersPageBGDownDesktop.svg');
@@ -149,34 +159,61 @@
     }
 }
 .brocker__content_image{
-    width:70%;
-    height:70%;
+    @media(max-width:800px){
+        width:70%;
+        height:70%;
+    }
+    @media(min-width:801px){
+        width:90%;
+        height:90%;
+    }
 }
 .brocker__content_gallery{
-    @media(max-width:800px){
+    @media(max-width:650px){
         padding-top:60px;
-        gap:18px;
+        gap:20px;
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+    }
+    @media(min-width:651px) and (max-width:1500px){
+        padding-top:60px;
+        gap:20px;
         display:flex;
         flex-direction:column;
     }
-    @media(min-width:1500px){
+    @media(min-width:1501px){
         display:grid;
-        grid-template-columns:50% 50%;
+        grid-template-columns:60% 40%;
+        
     }
 }
 .brocker__content_gallery_element{
     border: 1px solid rgba(85, 122, 161, 0.30);
     background: #23303F;
-    display:flex;
+    
     @media(max-width:650px){
+        display:flex;
         align-items:center;
         justify-content:space-between;
         gap:10%;
+        width:80%;
         min-width:290px;
         min-height:75px;
     }
-    @media(min-width:651px) and (max-width:1500px){
-        
+    @media(min-width:651px) and (max-width:800px){
+        display:grid;
+        grid-template-columns:50% 50%;
+        min-width: 340px;
+        min-height: 130px;
+    }
+    @media(min-width:801px) and (max-width:1500px){
+        display:grid;
+        grid-template-columns:60% 40%;
+        /* align-items:center; */
+        justify-content:space-between;
+        min-width: 340px;
+        min-height: 130px;
     }
     @media(min-width:1501px){
         
@@ -185,7 +222,7 @@
 .brocker__content_gallery_element_text{
     position:relative;
     @media(max-width:650px){
-        padding:10px 0px 10px 46px;
+        padding:14px 0px 14px 10px;
     }
     @media(min-width:651px) and (max-width:1500px){
         padding:20px 0px 20px 35px;
@@ -199,9 +236,13 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    @media(max-width:800px){
-        font-size: 15px;
+    @media(max-width:650px){
+        font-size: 16px;
         padding-bottom:4px;
+    }
+    @media(min-width:651px) and (max-width:800px){
+        font-size: 20px;
+        padding-bottom:8px;
     }
     @media(min-width:801px) and (max-width:1500px){
         font-size: 25px;
@@ -217,7 +258,7 @@
     font-style: normal;
     font-weight: 500;
     @media(max-width:800px){
-        font-size: 8px;
+        font-size: 12px;
         line-height: 12px;
     }
     @media(min-width:801px) and (max-width:1500px){
@@ -237,10 +278,16 @@
     font-weight: 600;
     line-height: normal;
     padding-right:20px;
-    @media(max-width:800px){
+    @media(max-width:650px){
         font-size: 30px;
     }
-    @media(min-width:801px){
+    @media(min-width:651px) and (max-width:800px){
+        font-size: 45px;
+    }
+    @media(min-width:801px) and (max-width:1500px){
+        font-size: 62px;
+    }
+    @media(min-width:1501px){
         font-size: 72px;
     }
 }
