--- a/src/components/MainPageComponents/Main slide/MainSlide.module.css
+++ b/src/components/MainPageComponents/Main slide/MainSlide.module.css
@@ -13,7 +13,7 @@ visibility:hidden;
         background-repeat: no-repeat;
         background-size:cover;        
     }
-    @media (min-width: 1050px) and (max-width: 1280px) { 
+    @media (min-width: 1051px) and (max-width: 1280px) { 
         width: 100%; /* Ширина контейнера */
         height: 100%; /* Высота контейнера */
         background-image: url('/src/assets/images/Rectangle 1.png'), url('/src/assets/images/Rectangle2Mob.png');
@@ -24,17 +24,17 @@ visibility:hidden;
         color:white;
         padding-top: 5px;
     }
-    @media (min-width: 1280px) and (max-width:1600px){
+    @media (min-width: 1281px) and (max-width:1600px){
         width: 100%; /* Ширина контейнера */
         height: 100%; /* Высота контейнера */
-        background-image: url('/src/assets/images/Rectangle 1.png'), url('/src/assets/images/Rectangle2.png');
+        background-image: url('/src/assets/images/Rectangle 1.png'), url('/src/assets/images/Rectangle2Mob.png');
         background-size: 20% 100%, 80% 100%; /* Размеры изображений */
         background-position: left center, right center; /* Позиционирование изображений */
         background-repeat: no-repeat;
         color:white;
         padding-top: 5px;
     }
-    @media (min-width: 1600px) {
+    @media (min-width: 1601px) {
         width: 100%; /* Ширина контейнера */
         height: 100%; /* Высота контейнера */
         background-image: url('/src/assets/images/New_Flowers_bg_mainSlide.jpg');
@@ -52,7 +52,7 @@ visibility:hidden;
         min-width: 1050px;
         max-width:1280px;
     }
-    @media (min-width: 1280px){
+    @media (min-width: 1281px){
         max-width:1600px;
     }
 }
@@ -61,17 +61,31 @@ visibility:hidden;
     @media (max-width: 1050px){
         padding-left: 15px;
     }
-    @media (min-width: 1050px) and (max-width: 1280px) { 
+    @media (min-width: 1051px) and (max-width: 1280px) { 
         padding-left: 30%;
     }
-    @media (min-width: 1280px){
+    @media (min-width: 1281px){
         padding-left: 30%;
     }
 }
 .flowerLogoWhite{
     color:white;
 }
-
+.img{
+    
+    @media (max-width: 1300px){
+        max-width:90px;
+        max-height:140px; 
+        min-width:90px;
+        min-height:140px;      
+    }
+    @media (min-width: 1301px) {
+        min-width: 130px;
+        min-height: 210px;
+        max-width: 130px;
+        max-height: 210px;
+    }
+}
 .mainSlide__text_norm{
     @media(max-width:800px){
         font-size: 12px;
@@ -79,13 +93,13 @@ visibility:hidden;
         padding-top:15px;
         padding-bottom:15px;
     }
-    @media(min-width:800px) and (max-width:1500px){
+    @media(min-width:801px) and (max-width:1500px){
         font-size: 10px;
         line-height: 16px;
         padding-top:15px;
         padding-bottom:15px;
     }
-    @media(min-width:1500px){
+    @media(min-width:1501px){
         line-height: 26px;
         padding-top:28px;
         padding-bottom:22px;
@@ -98,13 +112,13 @@ visibility:hidden;
         padding-top:15px;
         padding-bottom:15px;
     }
-    @media(min-width:800px) and (max-width:1500px){
+    @media(min-width:801px) and (max-width:1500px){
         font-size: 10px;
         line-height: 16px;
         padding-top:15px;
         padding-bottom:15px;
     }
-    @media(min-width:1500px){
+    @media(min-width:1501px){
         line-height: 26px;
         padding-top:28px;
         padding-bottom:22px;
@@ -129,7 +143,7 @@ visibility:hidden;
         padding-top:20px;
         padding-bottom:20px;
     }
-    @media(min-width:1500px){
+    @media(min-width:1501px){
         font-size: 14px;
         line-height: 24px;
         padding-top:25px;
