--- a/src/components/MainPageComponents/OrderForm/OrderForm.module.css
+++ b/src/components/MainPageComponents/OrderForm/OrderForm.module.css
@@ -68,7 +68,7 @@
 }
 .form__container_bg{
     width:100%;
-    background-image:url('/src/assets/images/illuminatorDark.jpg');
+    background-image:url('/src/assets/images/illuminatorDark.png');
     background-position: center; 
     background-repeat: no-repeat;
     background-size:cover; 
@@ -259,7 +259,7 @@ input[type="text"] {
 }
 
 .pict1{
-    background-image:url('/src/assets/images/flower4.jpg');
+    background-image:url('/src/assets/images/flower4.png');
     background-position: center; 
     background-repeat: no-repeat;
     background-size:cover; 
@@ -287,7 +287,7 @@ input[type="text"] {
     @media(min-width:1500px){
         height:auto;
     }
-    background-image:url('/src/assets/images/flower5.jpg');
+    background-image:url('/src/assets/images/flower5.png');
     background-position: center; 
     background-repeat: no-repeat;
     background-size:cover; 
