--- a/src/components/MainPageComponents/ButtonConnect/Button.module.css
+++ b/src/components/MainPageComponents/ButtonConnect/Button.module.css
@@ -1,5 +1,9 @@
 .button_size{
-    border: 1px solid white;
+    border: 1px solid rgba(255, 255, 255, 0.36);
+    /* transition: background-color 0.3s ease, border-color 0.3s ease; Добавить анимацию */
+    transition: border-color 0.3s ease;
+    position:relative;
+    overflow: hidden;
     @media(max-width: 1050px){
         padding-left:60px;
         padding-right:60px;
@@ -14,4 +18,80 @@
         padding: 25px 55px;
         white-space: nowrap;
     }
+}
+/* Создание псевдоэлементов для анимированной границы */
+.button_size::before, .button_size::after {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 1px; /* Ширина анимированной границы */
+    background: rgba(255, 255, 255, 1); /* Цвет границы */
+    transition: transform 0.3s ease;
+}
+
+/* Позиционирование псевдоэлементов */
+.button_size::before {
+    left: 0;
+    bottom:0;
+    transform: scaleX(0);
+    transform-origin: left;
+    transform: scaleY(0);
+    transform-origin: bottom;
+}
+
+.button_size::after {
+    right: 0;
+    top:0;
+    transform: scaleX(0);
+    transform-origin: right;
+    transform: scaleY(0);
+    transform-origin: top;
+}
+
+/* Анимация при наведении */
+.button_size:hover::before, .button_size:hover::after {
+    transform: scaleX(1);
+    transform: scaleY(1);
+}
+
+/* .button_leftCorner{
+    position:absolute;
+    bottom:0;
+    left:0;
+}
+.button_rightCorner{
+    position:absolute;
+    top:0;
+    right:0;
+} */
+
+
+
+/* Псевдоэлементы для верхней и нижней границ */
+.button_size::before:nth-of-type(2), .button_size::after:nth-of-type(2) {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px; /* Высота горизонтальной границы */
+    background: rgba(255, 255, 255, 1);
+    transition: transform 0.3s ease;
+}
+
+.button_size::before:nth-of-type(2) {
+    top: 0;
+    transform: scaleY(0);
+    transform-origin: top;
+}
+
+.button_size::after:nth-of-type(2) {
+    bottom: 0;
+    transform: scaleY(0);
+    transform-origin: bottom;
+}
+
+/* Анимация при наведении */
+.button_size:hover::before, .button_size:hover::after,
+.button_size:hover::before:nth-of-type(2), .button_size:hover::after:nth-of-type(2) {
+    transform: scaleX(1);
+    transform: scaleY(1);
 }
