--- a/src/components/MainPageComponents/ButtonConnect/Button.module.css
+++ b/src/components/MainPageComponents/ButtonConnect/Button.module.css
@@ -54,18 +54,6 @@
     transform: scaleY(1);
 }
 
-/* .button_leftCorner{
-    position:absolute;
-    bottom:0;
-    left:0;
-}
-.button_rightCorner{
-    position:absolute;
-    top:0;
-    right:0;
-} */
-
-
 
 /* Псевдоэлементы для верхней и нижней границ */
 .button_size::before:nth-of-type(2), .button_size::after:nth-of-type(2) {
@@ -85,13 +73,38 @@
 
 .button_size::after:nth-of-type(2) {
     bottom: 0;
+    left:0;
+    transform: scaleY(0);
+    transform-origin: left;
     transform: scaleY(0);
     transform-origin: bottom;
 }
 
+
+/* Стили для верхней и нижней границ */
+.border_top, .border_bottom {
+    content: '';
+    position: absolute;
+    left:0;
+    width: 100%;
+    height: 1px;
+    background: rgba(255, 255, 255, 1);
+    transition: transform 0.3s ease;
+}
+.border_top {
+    top: 0;
+    transform: scaleX(0);
+    transform-origin: left;
+}
+
+.border_bottom {
+    bottom: 0;
+    transform: scaleX(0);
+    transform-origin: right;
+}
+
 /* Анимация при наведении */
 .button_size:hover::before, .button_size:hover::after,
-.button_size:hover::before:nth-of-type(2), .button_size:hover::after:nth-of-type(2) {
+.button_size:hover .border_top, .button_size:hover .border_bottom {
     transform: scaleX(1);
-    transform: scaleY(1);
 }
