--- a/src/components/MainPageComponents/ButtonConnect/Button.module.css
+++ b/src/components/MainPageComponents/ButtonConnect/Button.module.css
@@ -1,20 +1,56 @@
 .button_size{
     border: 1px solid rgba(255, 255, 255, 0.36);
-    /* transition: background-color 0.3s ease, border-color 0.3s ease; Добавить анимацию */
-    transition: border-color 0.3s ease;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+    transition: background-color 0.3s ease;
     position:relative;
+    text-align: center;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: uppercase;
     overflow: hidden;
     @media(max-width: 1050px){
+        font-size: 10px;
+        letter-spacing: 1px;
         padding-left:60px;
         padding-right:60px;
         padding-top:21px;
         padding-bottom:21px;
     }
     @media(min-width: 1050px) and (max-width: 1280px){
+        font-size: 12px;
+        letter-spacing: 1.2px;
         white-space: nowrap;
         padding:14px 32px;
     }
     @media(min-width: 1280px){
+        font-size: 12px;
+        letter-spacing: 1.2px;
+        padding: 25px 55px;
+        white-space: nowrap;
+    }
+}
+.button_size:active{
+    background-color:white;
+    color: var(--Blue, #227CE4);
+    text-transform: uppercase;
+    @media(max-width: 1050px){
+        font-size: 10px;
+        letter-spacing: 1px;
+        padding-left:60px;
+        padding-right:60px;
+        padding-top:21px;
+        padding-bottom:21px;
+    }
+    @media(min-width: 1050px) and (max-width: 1280px){
+        font-size: 12px;
+        letter-spacing: 1.2px;
+        white-space: nowrap;
+        padding:14px 32px;
+    }
+    @media(min-width: 1280px){
+        font-size: 12px;
+        letter-spacing: 1.2px;
         padding: 25px 55px;
         white-space: nowrap;
     }
