--- a/src/components/MainPageComponents/Tariff/Tariff.module.css
+++ b/src/components/MainPageComponents/Tariff/Tariff.module.css
@@ -252,3 +252,150 @@
         padding:25px 60px;
     }
 }
+
+.button_size{
+    border: 1px solid rgba(255, 255, 255, 0.36);
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+    transition: background-color 0.3s ease;
+    position:relative;
+    text-align: center;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: uppercase;
+    overflow: hidden;
+    @media(max-width: 1050px){
+        font-size: 10px;
+        letter-spacing: 1px;
+        padding-left:60px;
+        padding-right:60px;
+        padding-top:21px;
+        padding-bottom:21px;
+    }
+    @media(min-width: 1050px) and (max-width: 1280px){
+        font-size: 12px;
+        letter-spacing: 1.2px;
+        white-space: nowrap;
+        padding:14px 32px;
+    }
+    @media(min-width: 1280px){
+        font-size: 12px;
+        letter-spacing: 1.2px;
+        padding: 25px 55px;
+        white-space: nowrap;
+    }
+}
+.button_size:active{
+    background-color:white;
+    color: var(--Blue, #227CE4);
+    text-transform: uppercase;
+    @media(max-width: 1050px){
+        font-size: 10px;
+        letter-spacing: 1px;
+        padding-left:60px;
+        padding-right:60px;
+        padding-top:21px;
+        padding-bottom:21px;
+    }
+    @media(min-width: 1050px) and (max-width: 1280px){
+        font-size: 12px;
+        letter-spacing: 1.2px;
+        white-space: nowrap;
+        padding:14px 32px;
+    }
+    @media(min-width: 1280px){
+        font-size: 12px;
+        letter-spacing: 1.2px;
+        padding: 25px 55px;
+        white-space: nowrap;
+    }
+}
+/* Создание псевдоэлементов для анимированной границы */
+.button_size::before, .button_size::after {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 1px; /* Ширина анимированной границы */
+    background: rgba(255, 255, 255, 1); /* Цвет границы */
+    transition: transform 0.3s ease;
+}
+
+/* Позиционирование псевдоэлементов */
+.button_size::before {
+    left: 0;
+    bottom:0;
+    transform: scaleX(0);
+    transform-origin: left;
+    transform: scaleY(0);
+    transform-origin: bottom;
+}
+
+.button_size::after {
+    right: 0;
+    top:0;
+    transform: scaleX(0);
+    transform-origin: right;
+    transform: scaleY(0);
+    transform-origin: top;
+}
+
+/* Анимация при наведении */
+.button_size:hover::before, .button_size:hover::after {
+    transform: scaleX(1);
+    transform: scaleY(1);
+}
+
+
+/* Псевдоэлементы для верхней и нижней границ */
+.button_size::before:nth-of-type(2), .button_size::after:nth-of-type(2) {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px; /* Высота горизонтальной границы */
+    background: rgba(255, 255, 255, 1);
+    transition: transform 0.3s ease;
+}
+
+.button_size::before:nth-of-type(2) {
+    top: 0;
+    transform: scaleY(0);
+    transform-origin: top;
+}
+
+.button_size::after:nth-of-type(2) {
+    bottom: 0;
+    left:0;
+    transform: scaleY(0);
+    transform-origin: left;
+    transform: scaleY(0);
+    transform-origin: bottom;
+}
+
+
+/* Стили для верхней и нижней границ */
+.border_top, .border_bottom {
+    content: '';
+    position: absolute;
+    left:0;
+    width: 100%;
+    height: 1px;
+    background: rgba(255, 255, 255, 1);
+    transition: transform 0.3s ease;
+}
+.border_top {
+    top: 0;
+    transform: scaleX(0);
+    transform-origin: left;
+}
+
+.border_bottom {
+    bottom: 0;
+    transform: scaleX(0);
+    transform-origin: right;
+}
+
+/* Анимация при наведении */
+.button_size:hover::before, .button_size:hover::after,
+.button_size:hover .border_top, .button_size:hover .border_bottom {
+    transform: scaleX(1);
+}
