--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -32,6 +32,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: 22px;
+    @media(min-width:1300px){
+        top:70px;
+    }
 }
 .button__lang_menu_element:hover{
     color:white
