--- a/src/components/MainPageComponents/Main slide/MainSlide.module.css
+++ b/src/components/MainPageComponents/Main slide/MainSlide.module.css
@@ -89,12 +89,12 @@ visibility:hidden;
 .mainSlide__text_norm{
     @media(max-width:800px){
         font-size: 12px;
-        line-height: 18px; /* 153.846% */
+        line-height: 18px;
         padding-top:15px;
         padding-bottom:15px;
     }
     @media(min-width:801px) and (max-width:1500px){
-        font-size: 10px;
+        font-size: 12px;
         line-height: 16px;
         padding-top:15px;
         padding-bottom:15px;
@@ -108,12 +108,12 @@ visibility:hidden;
 .mainSlide__text_bold{
     @media(max-width:800px){
         font-size: 12px;
-        line-height: 18px; /* 153.846% */
+        line-height: 18px; 
         padding-top:15px;
         padding-bottom:15px;
     }
     @media(min-width:801px) and (max-width:1500px){
-        font-size: 10px;
+        font-size: 12px;
         line-height: 16px;
         padding-top:15px;
         padding-bottom:15px;
