--- a/src/components/MainPageComponents/Calculation_shipment_1step/CalculationShipment_1step.module.css
+++ b/src/components/MainPageComponents/Calculation_shipment_1step/CalculationShipment_1step.module.css
@@ -16,6 +16,12 @@
     flex-direction:column;
     
 }
+.radioGroup{
+    display:flex;
+    align-items:start;
+    width:100%;
+    padding-left:1%;
+}
 .calc__container_div{
     width:100%;
     display:flex;
