--- a/src/components/MainPageComponents/Our_warehouses/Warehouses.module.css
+++ b/src/components/MainPageComponents/Our_warehouses/Warehouses.module.css
@@ -69,6 +69,7 @@
 .countriesLaptop{
     @media (max-width: 1050px) { 
         display:none;
+        visibility:hidden;
     }
 }
 .countriesMobile{
