--- a/src/components/ForBrokersComponents/BrockersPage.module.css
+++ b/src/components/ForBrokersComponents/BrockersPage.module.css
@@ -41,19 +41,22 @@
     }
     @media(min-width:801px) and (max-width:1100px){
         display:grid;
-        grid-template-columns:55% 45%;
+        grid-template-columns:52% 42%;
+        gap:6%;
         align-items:center;
         justify-content:center;
     }
     @media(min-width:1101px) and (max-width:1500px){
         display:grid;
-        grid-template-columns:65% 35%;
+        grid-template-columns:62% 32%;
+        gap:6%;
         align-items:center;
         justify-content:center;
     }
     @media(min-width:1501px){
         display:grid;
-        grid-template-columns:40% 60%;
+        grid-template-columns:37% 57%;
+        gap:6%;
         align-items:center;
         justify-content:center;
     }
@@ -168,14 +171,14 @@
     }
 }
 .brocker__content_image{
-    @media(max-width:800px){
+    /* @media(max-width:800px){
         width:70%;
         height:70%;
     }
     @media(min-width:801px){
         width:90%;
         height:90%;
-    }
+    } */
 }
 .brocker__content_gallery{
     @media(max-width:650px){
