--- a/src/components/ForBrokersComponents/BrockersPage.module.css
+++ b/src/components/ForBrokersComponents/BrockersPage.module.css
@@ -61,7 +61,7 @@
         justify-content:center;
     }
 }
-.brocker__content_bg{
+/* .brocker__content_bg{
     @media (max-width:800px){
         opacity:0.9;
         display:block;
@@ -85,8 +85,6 @@
         background-repeat: no-repeat;
         flex-shrink: 0;
         position:absolute;
-        /* left:-20px;
-        top:65px; */
         
         overflow:hidden;
     }
@@ -103,7 +101,7 @@
         top:50px;
         overflow:hidden;
     }
-}
+} */
 /* .brocker__content_bg_down{
     @media (max-width:650px){
         opacity:0.9;
